--- a/deploy/aim/service.yaml
+++ b/deploy/aim/service.yaml
@@ -11,6 +11,10 @@ spec:
       protocol: TCP
       port: 43800
       targetPort: 43800
+    - name: 53800-tcp
+      protocol: TCP
+      port: 53800
+      targetPort: 53800
   type: ClusterIP
   selector:
     app: aim
